<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect" />

    <EditText
        android:id="@+id/edit_text_out"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:gravity="center_vertical|top"
        android:hint="@string/input"
        android:text="Please wait while Printing"
        android:textSize="18sp"></EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/testerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Print Test" />

            <Button
                android:id="@+id/btn_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnClose" />

            <ImageView
                android:id="@+id/imageViewPictureUSB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contentdescription"
                android:maxWidth="1080dp"
                android:maxHeight="1920dp"
                android:src="@mipmap/ic_launcher_foreground" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
