<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="#113d48"
    android:layout_marginTop="5dp"
    android:paddingBottom="5dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:accessibilityLiveRegion="assertive"
    android:focusable="true"
    android:outlineProvider="paddedBounds">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Login "
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:background="#68e3dde0"
        android:textColor="#f6bd1f"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColorHint="#ffffff"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:minHeight="25dp"
        android:hint="@string/Create_Username"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:id="@+id/user_name"
        android:ellipsize="end"
        android:singleLine="true"
        android:maxLines="1"
        android:background="#68e3dde0"
        android:textColor="#ffffff"
        android:paddingLeft="5dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:textColorHint="#ffffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:minHeight="25dp"
        android:hint="@string/Create_Password"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:id="@+id/usnm_pass"
        android:ellipsize="end"
        android:singleLine="true"
        android:maxLines="1"
        android:background="#68e3dde0"
        android:textColor="#ffffff"
        android:paddingLeft="5dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:textColorHint="#ffffff" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:minHeight="25dp"
        android:hint="@string/User_Phone_Number"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:id="@+id/user_number"
        android:ellipsize="end"
        android:singleLine="true"
        android:maxLines="1"
        android:background="#68e3dde0"
        android:textColor="#ffffff"
        android:paddingLeft="5dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:textColorHint="#ffffff" />

    <Spinner
        android:id="@+id/hintQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff838383"
        android:textColor="#ffffff"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="250dp"
        android:minHeight="25dp"
        android:hint="@string/Type_Answer"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:id="@+id/hint_answer"
        android:ellipsize="end"
        android:singleLine="true"
        android:maxLines="1"
        android:background="#68e3dde0"
        android:textColor="#ffffff"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingBottom="5dp"
        android:textColorHint="#ffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:text="Sign IN"
        android:minWidth="150dp"
        android:minHeight="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="#059" />


</LinearLayout>