<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical"
    android:padding="1dp">

    <LinearLayout
        android:id="@+id/relativeLayout_courier"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/relativeLayout_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/common_google_signin_btn_text_light_focused"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:text="@string/card_number"
                android:textColor="@color/red"
                android:textSize="@dimen/default_font" />

            <EditText
                android:id="@+id/edittext_car_code"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5.0dip"
                android:background="@color/black"
                android:enabled="false"
                android:inputType="text"
                android:text=""
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/default_font" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/relativeLayout_amount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/common_google_signin_btn_text_light_focused"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/amount"
                android:textAlignment="viewEnd"
                android:textColor="@color/back_color"
                android:textSize="@dimen/default_font" />

            <EditText
                android:id="@+id/contentAmount"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:background="@color/common_google_signin_btn_text_dark_focused"
                android:clickable="false"
                android:editable="false"
                android:enabled="false"
                android:inputType="text"
                android:text=""
                android:textAlignment="viewEnd"
                android:textColor="@color/back_color"
                android:textSize="@dimen/default_font" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout

        android:id="@+id/mifareclassic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_google_signin_btn_text_light_focused"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:text="@string/card_content"
            android:textColor="@color/red"
            android:textSize="@dimen/default_font" />

        <EditText
            android:id="@+id/edittext_content"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5.0dip"
            android:background="@color/black"
            android:editable="false"
            android:enabled="false"
            android:inputType="text"
            android:text=""
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/default_font" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:editable="false"
            android:text="@string/duration"
            android:textColor="@color/red"
            android:textSize="@dimen/default_font" />

        <EditText
            android:id="@+id/contentDuration"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5.0dip"
            android:background="@color/black"
            android:clickable="false"
            android:editable="false"
            android:enabled="false"
            android:inputType="text"
            android:text=""
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/default_font" />


        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10.0dip"
            android:fontFamily="monospace"
            android:text="PLATE NUMBER"
            android:textColor="@color/blue"
            android:textSize="@dimen/default_font" />

        <EditText
            android:id="@+id/contentPlate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5.0dip"
            android:background="@color/gray_7"
            android:clickable="true"
            android:editable="true"
            android:enabled="true"
            android:maxLength="7"
            android:inputType="textCapCharacters"
            android:singleLine="true"
            android:text=""
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="@dimen/default_font"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/privateBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_light_default"
            android:src="@mipmap/privatecar"
            app:srcCompat="@mipmap/privatecar" />

        <ImageButton
            android:id="@+id/motorBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_light_focused"
            android:src="@mipmap/motorcycle"
            app:srcCompat="@mipmap/motorcycle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/seniorBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_light_focused"
            android:src="@mipmap/senior"
            app:srcCompat="@mipmap/senior" />

        <ImageButton
            android:id="@+id/vipBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_light_default"
            android:src="@mipmap/vip"
            app:srcCompat="@mipmap/vip" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>


</LinearLayout>